--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h2>Home</h2>
+<div class="jumbotron text-center">
+  <h1>Welcome to Ruby Match</h1>
+  <h3>Matching Senior and Junior Devs Together</h3>
+</div>
