--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,3 +20,20 @@
 
 @import "font-awesome-sprockets";
 @import "font-awesome";
+
+//.navbar {
+//  // Gradient from http://uigradients.com/#
+//  background: -webkit-linear-gradient(90deg, #ff0084 10%, #33001b 90%); /* Chrome 10+, Saf5.1+ */
+//  background:    -moz-linear-gradient(90deg, #ff0084 10%, #33001b 90%); /* FF3.6+ */
+//  background:     -ms-linear-gradient(90deg, #ff0084 10%, #33001b 90%); /* IE10 */
+//  background:      -o-linear-gradient(90deg, #ff0084 10%, #33001b 90%); /* Opera 11.10+ */
+//  background:         linear-gradient(90deg, #ff0084 10%, #33001b 90%); /* W3C */
+//
+//}
+
+body {
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-image: url("background.jpg");
+}
+
